# gamedev

./: .gitignore  CMakeLists.txt  pygame_test.py
src/: main.cpp
